# time-series-mts-hse

./: .gitignore  Makefile  README.md  app.py  forecaster.py  pyproject.toml
data/: shop_sales.csv  shop_sales_dates.csv  shop_sales_prices.csv  shop_sales_without_cnt.csv  test.ipynb
hw1/: exam task вшэ.ipynb  forecaster.py  pyproject.toml
models/: item_ids.json
models/STORE_2_043/: test_data.csv  train_data.csv
models/STORE_2_054/: test_data.csv  train_data.csv
models/STORE_2_085/: test_data.csv  train_data.csv
models/STORE_2_090/: test_data.csv  train_data.csv
models/STORE_2_252/: test_data.csv  train_data.csv
models/STORE_2_325/: test_data.csv  train_data.csv
models/STORE_2_376/: test_data.csv  train_data.csv
models/STORE_2_391/: test_data.csv  train_data.csv
models/STORE_2_524/: test_data.csv  train_data.csv
models/STORE_2_555/: test_data.csv  train_data.csv
models/STORE_2_586/: test_data.csv  train_data.csv
models/STORE_2_587/: test_data.csv  train_data.csv
models/STORE_2_681/: test_data.csv  train_data.csv
models/STORE_2_714/: test_data.csv  train_data.csv
models/STORE_2_716/: test_data.csv  train_data.csv
